# mewline

./: .pre-commit-config.yaml  Makefile  PKGBUILD  PKGBUILD.stable  README.md  README.ru.md  mewline.install  pyproject.toml  requirements.txt  run.py  whitelist-vulture
.github/workflows/: lint.yml  update-aur.yml
docs/: configuration.md  configuration.ru.md
mewline/: app.py  config.py  constants.py
mewline/services/: __init__.py  brightness.py
mewline/shared/: rounded_image.py  widget_container.py
mewline/styles/: corners.scss  main.scss
mewline/styles/common/: common.scss
mewline/styles/dynamic_island/: island.scss  notifications.scss
mewline/utils/: config_structure.py  hyprland_monitors.py  misc.py  theming.py
mewline/widgets/: battery.py  brightness.py  datetime.py  power.py  screen_corners.py  status_bar.py  system_tray.py  volume.py  workspaces.py
mewline/widgets/dynamic_island/: __init__.py  notifications.py  power.py
src/mewline/: __main__.py  config.py  constants.py
src/mewline/custom_fabric/bspwm/: __init__.py  service.py  widgets.py
src/mewline/errors/: settings.py
src/mewline/services/: __init__.py  audio_monitor.py  audio_visualizer.py  battery.py  brightness.py  cache_notification.py  mpris.py  network.py  notifications.py  priority_audio.py
src/mewline/shared/: popover.py  scale.py  widget_container.py
src/mewline/styles/: battery.scss  combined_controls.scss  corners.scss  default_theme.scss  main.scss  ocr.scss  osd.scss  system_tray.scss  theme.scss  variable.scss
src/mewline/styles/common/: common.scss
src/mewline/styles/dynamic_island/: app_launcher.scss  bluetooth.scss  clipboard.scss  date_notification.scss  datemenu.scss  emoji.scss  island.scss  network.scss  notifications.scss  pawlette_themes.scss  power.scss  wallpapers.scss  wifi.scss  workspaces_overview.scss
src/mewline/utils/: bspwm_monitors.py  capture_output.py  config_structure.py  hyprland_monitors.py  icon_resolver.py  misc.py  psutil.py  setup_loguru.py  theming.py  widget_utils.py  window_manager.py
src/mewline/widgets/: __init__.py  audio_controls.py  audio_visualizer.py  battery.py  bluetooth.py  brightness.py  combined_controls.py  datetime.py  language.py  microphone.py  network_status.py  ocr.py  osd.py  power.py  screen_corners.py  status_bar.py  system_tray.py  volume.py  workspaces.py
src/mewline/widgets/dynamic_island/: __init__.py  app_launcher.py  bluetooth.py  clipboard.py  compact.py  date_notification.py  emoji.py  network.py  notifications.py  pawlette_themes.py  power.py  wallpapers.py  workspaces.py
tests/: bspwm_event_tester.py  test_config.py
