[project]
name = "mewline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fabric",
    "loguru>=0.7.3",
    "psutil>=6.1.1",
    "pydantic>=2.10.6",
    "setproctitle>=1.3.4",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.1.0",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }

[project.urls]
Homepage = "https://github.com/meowrch/mewline"
Documentation = "https://github.com/meowrch/mewline/wiki"
Repository = "https://github.com/meowrch/mewline.git"
"Bug Tracker" = "https://github.com/meowrch/mewline/issues"
Changelog = "https://github.com/meowrch/mewline/blob/master/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F", "D101", "N", "SIM", "W", "PERF", "RUF", "I", "E"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
